# HLTV-py

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: playground.py
hltv/: __init__.py  config.py  scraper.py  utils.py
hltv/endpoints/: connect_to_scorebot.py  get_event.py  get_event_by_name.py  get_events.py  get_match.py  get_match_map_stats.py  get_match_stats.py  get_matches.py  get_matches_stats.py  get_news.py  get_past_events.py  get_player.py  get_player_by_name.py  get_player_ranking.py  get_player_stats.py  get_recent_threads.py  get_results.py  get_streams.py  get_team.py  get_team_by_name.py  get_team_ranking.py  get_team_stats.py
hltv/shared/: article.py  best_of_filter.py  country.py  event.py  event_type.py  game_map.py  match_format.py  match_type.py  player.py  ranking_filter.py  team.py
