[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "hltv-py"
version = "3.5.0"
description = "Unofficial HLTV.org API for Python"
readme = "README.md"
license = {text = "ISC"}
authors = [
    {name = "Stanislav Iliev (original Node.js version)", email = "stanislav.iliev@example.com"},
    {name = "Translated to Python"}
]
keywords = ["hltv", "api", "crawler", "parser", "csgo", "cs2"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "python-socketio[client]>=5.10",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.setuptools.packages.find]
where = ["."]
include = ["hltv", "hltv.*"]